Fix: Clear all not visibly updating filter buttons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -721,10 +721,6 @@ video {
   margin: 2rem;
 }
 
-.m-6 {
-  margin: 1.5rem;
-}
-
 .mx-\[10vw\] {
   margin-left: 10vw;
   margin-right: 10vw;
@@ -958,6 +954,10 @@ video {
   width: 112.766px;
 }
 
+.w-\[1600px\] {
+  width: 1600px;
+}
+
 .w-\[165px\] {
   width: 165px;
 }
@@ -1016,10 +1016,6 @@ video {
 
 .w-\[95\%\] {
   width: 95%;
-}
-
-.w-\[1600px\] {
-  width: 1600px;
 }
 
 .min-w-\[100vw\] {
@@ -1164,10 +1160,6 @@ video {
 
 .overflow-x-hidden {
   overflow-x: hidden;
-}
-
-.overflow-x-scroll {
-  overflow-x: scroll;
 }
 
 .overflow-y-scroll {
@@ -1335,10 +1327,6 @@ video {
   padding: 25px;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1442,11 +1430,6 @@ video {
 .py-\[5px\] {
   padding-top: 5px;
   padding-bottom: 5px;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .pt-4 {
